fixing dark mode

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -27,9 +27,13 @@ ion-content {
 }
 
 h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-bottom: 1rem;
     font-weight: bold;
+}
+
+h2 {
+    font-size: 1.5rem;
 }
 
 a {
@@ -43,7 +47,7 @@ a {
 }
 
 .subtitle {
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin-bottom: 1rem;
 }
 
@@ -57,7 +61,7 @@ ion-icon {
 }
 
 .socials .media {
-    font-size: 3rem;
+    font-size: 2rem;
     margin: 0 1rem;
     color: #333;
 }
